<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorization_fragments.SingUpFragment"
    android:clickable="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background">
    <ImageView
        android:id="@+id/sing_up_logoimage"
        android:layout_width="266dp"
        android:layout_height="62dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="105dp"
        android:src="@drawable/mylogo"/>
        <RelativeLayout
            android:id="@+id/sing_up_container"
            android:layout_below="@id/sing_up_logoimage"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/rectangle_background_white_transparent">
            <TextView
                android:id="@+id/sing_up_login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_alignLeft="@id/sing_up_login_et"
                android:layout_marginTop="15dp"
                />
            <EditText
                android:id="@+id/sing_up_login_et"
                android:layout_width="215dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/sing_up_login_tv"
                android:hint="This is login"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:paddingLeft="5dp"
                android:background="@drawable/rectangle_background_white"
                />
            <TextView
                android:id="@+id/sing_up_email_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="14sp"
                android:layout_alignLeft="@id/sing_up_login_tv"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:layout_below="@id/sing_up_login_et"/>
            <EditText
                android:id="@+id/sing_up_email_et"
                android:layout_width="215dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:textSize="14sp"
                android:inputType="textEmailAddress"
                android:paddingLeft="5dp"
                android:background="@drawable/rectangle_background_white"
                android:layout_below="@id/sing_up_email_tv"/>
            <TextView
                android:id="@+id/sing_up_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_alignLeft="@id/sing_up_login_et"
                android:layout_marginTop="5dp"
                android:layout_below="@id/sing_up_email_et"
                />
            <EditText
                android:id="@+id/sing_up_password_et"
                android:layout_width="215dp"
                android:layout_height="30dp"
                android:inputType="textPassword"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rectangle_background_white"
                android:layout_below="@id/sing_up_password_tv"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:paddingLeft="5dp"/>
            <TextView
                android:id="@+id/sing_up_confirm_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_alignLeft="@id/sing_up_login_et"
                android:layout_marginTop="5dp"
                android:layout_below="@id/sing_up_password_et"
                />
            <EditText
                android:id="@+id/sing_up_confirm_password_et"
                android:layout_width="215dp"
                android:layout_height="30dp"
                android:inputType="textPassword"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rectangle_background_white"
                android:layout_below="@id/sing_up_confirm_password_tv"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:paddingLeft="5dp"/>
            <Button
                android:id="@+id/sign_up_reg_button"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/registration"
                android:textSize="14sp"
                android:background="@drawable/rectangle_background_red"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/sing_up_confirm_password_et"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="15dp"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sing_up_container"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/already_has_account"/>
            <TextView
                android:id="@+id/sign_up_sign_in_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sing_in_underline"
                android:textColor="@color/blue"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>