<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/filter_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/filter_advanced_search_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advanced_search"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            />
        <CheckBox
            android:id="@+id/filter_advanced_search_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/filter_advanced_search_tv"
            android:layout_centerVertical="true"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/filter_main_filter_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/filter_container"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        android:layout_margin="5dp"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currency"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"/>
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/currency_kind"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:background="@drawable/regtangle_background_border"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    />
                <EditText
                    android:layout_width="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:minWidth="100dp"
                    android:maxWidth="200dp"
                    android:inputType="number"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/regtangle_background_border"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:minWidth="100dp"
                    android:maxWidth="200dp"
                    android:inputType="number"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/regtangle_background_border"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    />
            </GridLayout>



        </LinearLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>