<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".authorization_fragments.ConfirmRegistationFragment"
    android:background="@drawable/main_background"
    android:clickable="false">
    <ImageView
        android:id="@+id/confirm_registration_logoimage"
        android:layout_width="266dp"
        android:layout_height="62dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="105dp"
        android:src="@drawable/mylogo"/>
    <TextView
        android:id="@+id/confirm_registration_we_sent_code_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:text="@string/we_sent_code"
        android:textSize="16sp"
        android:layout_below="@id/confirm_registration_logoimage"
        android:layout_marginTop="100dp"/>
    <TextView
        android:id="@+id/confirm_registration_enter_code_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/enter_code"
        android:layout_below="@id/confirm_registration_we_sent_code_tv"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>
    <com.alimuzaffar.lib.pin.PinEntryEditText
        android:id="@+id/confirm_registration_code_pinentry_et"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:maxLength="5"
        android:layout_below="@id/confirm_registration_enter_code_tv"
        android:layout_marginTop="5dp"
        android:inputType="number"
        android:digits="1234567890"
        android:cursorVisible="false"
        app:pinBackgroundIsSquare="true"
        android:textColor="@color/white"
        app:pinBackgroundDrawable="@drawable/rectangle_white_transparent"/>
    <Button
        android:id="@+id/confirm_registration_btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rectangle_background_red"
        android:textColor="@color/white"
        android:layout_below="@id/confirm_registration_code_pinentry_et"
        android:text="@string/confirm"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="20dp"/>
</RelativeLayout>